tests/ui/compile_fail/multiple_named_fields_generic.rs
#[derive(enumorph::Enumorph)]
enum Enum<T> {
    A { b: T, c: u8 },
}

fn main() {}
